# gatsu-comment-viewer

./: .gitignore  README.md  build_app.bat  bundle_proto.js  debug_nico_props.js  history.html  index.html  muted_users.html  options.html  package-lock.json  package.json  server.cjs  server.js  test_bouyomi.js  test_client_simulation.js  test_logic.js  test_ndgr_connect.js  test_niconico.js  test_niconico_long.js  test_websocket.js  tsconfig.json  vite.config.ts
proto/: ndgr.proto
public/: ndgr_full.proto
src/: db.ts  history.ts  main.ts  muted_users.ts  niconico.ts  options.ts  style.css  types.d.ts
src-tauri/: Cargo.toml  build.rs  build_log.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/proto/: ndgr.proto  nicolive.proto
src-tauri/src/: lib.rs  niconico.rs
src/src/: NiconamaClient.ts  index.ts
src/src/NiconamaMessageServer/: index.ts  internal.ts  type.ts
src/src/NiconamaPage/: index.ts  type.ts
src/src/NiconamaUtility_old/: connector.ts  index.ts
src/src/NiconamaWs/: Error.ts  ReceiveMessag.ts  SendMessage.ts  disconnect.ts  index.ts  type.ts
src/src/_protobuf/: dwango_pb.ts  index.ts
src/src/types/: comment.ts  index.ts  internal.ts  stream.ts
src/src/utility/: network.ts  protobuf.ts  utils.ts
src/src/utils/: index.ts
src/src/utils/extension/: connect.ts.txt  type.ts.txt
src/src/utils/lib/: AsyncIteratorSet.ts  CollectingMap.ts  EventEmitter.ts  EventTrigger.ts  Option.ts  Result.ts
src/src/utils/types/: SpeechRecognition.d.ts  global.d.ts
src/types/: global.d.ts
temp_test/: Cargo.toml
(+11 files in other folders)
