[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-window-state = "2"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
urlencoding = "2"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
prost = "0.13"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
thiserror = "1.0"
regex = "1.10"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
prost-build = "0.13"
protoc-bin-vendored = "3.0"
